deploy: kosalanuwan/www-books@64a2b0013863ae9d3d7e3cc9a5cdede57b06a961

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/books/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/books/assets/css/main.css?202008110546" type="text/css">
+  <link rel="stylesheet" href="/books/assets/css/main.css?202008111007" type="text/css">
 </head>
 
   <body>
@@ -73,7 +73,7 @@
 <p>Explore some of my personal fiction writing experience around plots I’ve always fantasize. Originally, these story outlines and synopsis used to be just scripts on World Documents laying on my hard drive.</p>
 
 <article>
-    <h3>Fantasy Writing: Untitled Story</h3>
+    <h3>Untitled Story</h3>
     <h4>August 2015</h4>
     
 
@@ -83,7 +83,11 @@
 </div>
 
 
-    <p>An attempt for Fiction/Fantasy writing based on the characters appearing in the comic books published by  Marvel and DC and a couple of more TV shows. Oh, by the way, this has vivid graphics that are darker than Nolan’s version,  and no one, seriously, no one wears spandex.<br><br>
+    <p>
+        </p>
+<h5>Fantasy, YA</h5>
+    
+    <p>An attempt for fiction writing based on the characters appearing in the comic books published by  Marvel and DC and a couple of more TV shows. Oh, by the way, this has vivid graphics that are darker than Nolan’s version,  and no one, seriously, no one wears spandex.<br><br>
 The story doesn’t have a beginning nor end. And, is based on Naïve Narrator’s perspective.  The author narrates everything as it happens when it happens.</p>
 </article>
 
