deploy: kosalanuwan/gh-books-site@8f041159a0809096e80402a0f65836b4e8ec78cf

--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/books/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/books/assets/css/main.css?202008161939" type="text/css">
+  <link rel="stylesheet" href="/books/assets/css/main.css?202008241719" type="text/css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 <header>
 
     <h1>
-      <a href="/">
+      <a href="/books/">
         <span>#</span>books
       </a>
     </h1>
