--- a/404.html
+++ b/404.html
@@ -18,19 +18,19 @@
 
   <title>
     
-      404: Page not found &middot; #books
+      404: Page not found &middot; books
     
   </title>
 
   <link rel="canonical" href="https://kosalanuwan.github.io/books/404.html">
-  <link rel="alternate" type="application/rss+xml" title="RSS Feed for #books" href="https://kosalanuwan.github.io/books/atom.xml">
+  <link rel="alternate" type="application/rss+xml" title="RSS Feed for books" href="https://kosalanuwan.github.io/books/atom.xml">
   <!-- Fonts -->
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|PT+Mono&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <!-- Icons -->
   <link rel="shortcut icon" href="/books/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/books/assets/css/main.css?202012130752" type="text/css">
+  <link rel="stylesheet" href="/books/assets/css/main.css?202101010616" type="text/css">
 </head>
 
 <body>
@@ -41,9 +41,7 @@
 <header>
 
     <h1>
-      <a href="/books/">
-        <span>#</span>books
-      </a>
+      <a href="/books/">{ website.title }}</a>
     </h1>
     <p class="lead">
       <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s plot summaries and story outlines of fiction writing. This is how it all should have happened.
@@ -79,7 +77,7 @@
   <p><img class="emoji" title=":heart:" alt=":heart:" src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png" height="20" width="20"></p>
   <p>Originally, this site is an adaptation from <a href="http://wtfhtmlcss.com/">WTF, HTML and CSS?</a> site.</p>
   <p>Design is not open sourced. Crafted by <a href="https://github.com/kosalanuwan">@kosalanuwan</a>.</p>
-  <p>© 2020. All rights reserved.</p>
+  <p>© 2021. All rights reserved.</p>
 </footer>
   </div>
 </body>
