--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Icons -->
   <link rel="shortcut icon" href="/books/assets/img/favicon.ico">
   <!-- CSS -->
-  <link rel="stylesheet" href="/books/assets/css/main.css?202101010616" type="text/css">
+  <link rel="stylesheet" href="/books/assets/css/main.css?202101010621" type="text/css">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
 <header>
 
     <h1>
-      <a href="/books/">{ website.title }}</a>
+      <a href="/books/">books</a>
     </h1>
     <p class="lead">
       <a href="https://kosalanuwan.github.io"><span>@</span>kosalanuwan</a>'s plot summaries and story outlines of fiction writing. This is how it all should have happened.
